Grid: Hover fix on Mobile Safari

--- a/src/style.scss
+++ b/src/style.scss
@@ -13,6 +13,18 @@
 
 }
 
+html,
+body {
+    height: 100%;
+    padding: 0;
+    margin: 0;
+
+}
+
+* {
+    box-sizing: border-box;
+}
+
 body {
     font-family: var(--font);
     margin: 0;
@@ -20,6 +32,7 @@ body {
 }
 
 .grid-container {
+    overflow-y: auto;
     overflow-x: scroll;
     max-height: 100%;
     margin: 6px;
